<resources>
    <string name="app_name">Halp.me</string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="terminos_condiciones">
                Esto es una aplicación hecha para un trabajo de fin de curso, recomendadamos encarecidamente no meter datos importantes como contrasñas, nombres completos etcetera.\n\n
                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum quis ligula pharetra odio varius posuere sit amet non ligula. Donec eu efficitur nisi. Ut risus massa, tincidunt vel urna eget, gravida venenatis justo. Ut pulvinar porttitor mi non luctus. Nullam rutrum odio at purus fermentum dictum. In sagittis metus lectus, id volutpat quam venenatis at. Phasellus id tristique urna, sed fermentum felis. Suspendisse luctus, sapien nec volutpat condimentum, eros libero ultrices ex, nec porta urna lacus a sapien. Integer rutrum eu neque tincidunt pulvinar. Quisque consectetur, ex dictum dictum tincidunt, metus risus eleifend elit, a luctus sapien diam ut enim. Cras condimentum, velit sed convallis tincidunt, magna nulla porttitor quam, vel cursus nunc sem sit amet neque. Nullam pulvinar dolor lacinia enim mollis, vitae mollis justo pellentesque. Quisque vel metus a tortor congue aliquet sit amet non mauris.
                \nSuspendisse eu faucibus sapien, at pulvinar mi. Duis diam diam, faucibus sed massa et, ullamcorper facilisis lectus. Duis ut nulla vel odio imperdiet consectetur. Mauris et ante congue, varius justo eget, maximus felis. Curabitur eu eros ante. Sed tempus metus in erat sagittis, a luctus nulla imperdiet. Fusce nibh neque, efficitur nec sem quis, placerat pretium lorem. Fusce condimentum gravida ipsum, vel mattis ante luctus id. Cras tincidunt enim sit amet ligula luctus pretium.\n\n" +
                In placerat, magna sed tempus tempus, nisi dui luctus nisi, ac porta tellus quam eget magna. Nullam vitae tellus dui. Fusce egestas finibus purus ut placerat. Sed tincidunt pretium luctus. Nam consequat eu felis eu ornare. Duis efficitur auctor quam ac egestas. Fusce pellentesque ex magna, a posuere mauris sollicitudin vel. In condimentum nulla ante.
                se enviarán</string>
    <string name="no">No</string>
    <string name="si">Si</string>
    <string name="necesitamossaber"></string>
    <string name="datosnoenciaran">Los datos introducidos no se enviarán</string>
    <string name="deseasalir">¿Deseas salir?</string>
    <string name="desconectar">Desconectar</string>
    <string name="sobreNosotros">Sobre nosotros</string>
    <string name="ayuda">Ayuda</string>
    <string name="miseventos">Mis Eventos</string>
    <string name="nuevohalp">Nuevo Halp</string>
    <string name="slogan">Contigo pipo</string>
    <string name="registrate">¿No estas registrado? ¡Registrate!</string>
    <string name="btnEntrar">¡Entrar!</string>
    <string name="Abrir">Abrir</string>
    <string name="Cerrar">Cerrar</string>
    <string name="editarusuario">Editar Usuario</string>
    <string name="btncambios">Pulse el boton para aplicar los cambios.</string>
    <string name="nuevousuario">Nuevo nombre Usuario</string>
    <string name="nuevocorreo">Nuevo correo electronico</string>
    <string name="nuevacontrasena">Nueva contraseña</string>
    <string name="repitacontra">Repita nueva contraseña</string>
    <string name="aplicar">Aplicar</string>
    <string name="enriqueces">¿Buscas u Ofreces ayuda?</string>
    <string name="buscoayuda">¡Busco ayuda!</string>
    <string name="ofrezcoayuda">¡Ofrezco ayuda!</string>
    <string name="descripcionNecesitas">¡Describe brevemente qué necesitas!</string>
    <string name="descripcionOfreces">¡Describe brevemente qué ofreces!</string>
    <string name="escribeQueNeceistas">Escribe aquí que necesitas</string>
    <string name="escribeQueOfreces">Escribe aquí que ofreces</string>
    <string name="descripcionDetallada">¡Añade una descripción más detallada!</string>
    <string name="escribeDescripcion">Escribe aquí  una descripción lo más detallada posible</string>
    <string name="cincuentacaracteres">0 / 50 caracteres.</string>
    <string name="quinientoscaracteres">0 / 500 caracteres.</string>
    <string name="cancelar">Cancelar</string>
    <string name="aceptar">Aceptar</string>
    <string name="crear">Crear</string>
    <string name="halp">Halp.me</string>
    <string name="recuerdame">Recuerdame</string>
    <string name="busco">Busco</string>
    <string name="ofrezco">Ofrezco</string>
    <string name="telefono">¡Añade un numero de telefono!</string>
    <string name="escribeTelefono">Escribe aqui tu numero de telefono</string>
    <string name="llamar">Llamar</string>
    <string name="verGPS">Ver en GPS</string>
    <string name="cargar_imagen">¡Escoge una imagen representativa!</string>
    <string name="galeria">Galeria</string>
    <string name="camara">Cámara</string>
    <string name="q_que_es_esta_aplicacion">¿Qué es esta aplicación?</string>
    <string name="a_que_es_esta_aplicacion">Esta aplicación es un trabajo de fin de ciclo de tres alumnos de Desarrollo de Interfaces Multiplataforma, la app a pesar de ser funcional no está orientada a su uso ni está hecha como ánimo de lucro.\nRecomendamos que no se introduzca ningún dato real importante</string>
    <string name="q_quienes_semos">¿Quiénes son los desarrolladores?</string>
    <string name="escribeCPost">Escribe aqui tu codigo postal</string>
    <string name="CPost">¡Escribe el código postal de la zona!</string>
    <string name="quenitas">¡Necesitamos saber brevemente qué necesitas!</string>
    <string name="quedescripcion">¡Necesitamos una descripción detallada de lo que necesitas!</string>
    <string name="quetelefono">¡Necesitamos un número de teléfono válido!</string>
    <string name="necesitpostal">¡Necesitamos un codigo postal!</string>
    <string name="necesitaimagen">¡Necesitamos una imagen!</string>
    <string name="nohayinternet">¡Parece que no tienes internet, comprueba tu conexión por favor!</string>
    <string name="peticionsatisfactoria">¡Tu petición se ha creado satisfactoriamente!</string>
    <string name="problemapeticion">¡Ha habido un problema con tu petición, intentalo otra vez!</string>
    <string name="preguntasfrecuentes">Preguntas frecuentes</string>
</resources>
