<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.software.dafepa.proyectolaescalera.Login.RegistroActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bcklogin"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_gravity="center"
            android:src="@drawable/recortebueno"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#40FFFFFF"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="#30FFFFFF"
                android:orientation="vertical"
                android:paddingBottom="20dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/editarusuario"
                    android:textColor="@color/blanco"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/btncambios"
                    android:textColor="@color/blanco"
                    android:textSize="12dp" />


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittextstyle"
                    android:drawableLeft="@drawable/user"
                    android:drawablePadding="6dp"
                    android:hint="@string/nuevousuario"
                    android:paddingLeft="10dp" />


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittextstyle"
                    android:drawableLeft="@drawable/mail"
                    android:drawablePadding="6dp"
                    android:hint="@string/nuevocorreo"
                    android:paddingLeft="10dp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittextstyle"
                    android:hint="@string/nuevacontrasena"
                    android:drawableLeft="@drawable/password"
                    android:drawablePadding="6dp"
                    android:inputType="textPassword"
                    android:paddingLeft="10dp"/>

                <EditText
                    android:id="@+id/et_contrasena1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittextstyle"
                    android:hint="@string/repitacontra"
                    android:drawablePadding="6dp"
                    android:drawableLeft="@drawable/password"
                    android:paddingLeft="10dp"

                    android:inputType="textPassword" />




                <Button
                    android:id="@+id/btn_registrame"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/buttonstyle"
                    android:text="@string/aplicar"
                    android:textColor="@color/blanco" />

            </LinearLayout>



        </LinearLayout>


    </LinearLayout>
</android.support.constraint.ConstraintLayout>
