<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.software.dafepa.proyectolaescalera.InfoElemeneto">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"
        app:layout_scrollFlags="scroll|enterAlways" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_fondo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_fondo"
            android:orientation="vertical"
            tools:context="com.software.dafepa.proyectolaescalera.NuevoEvento">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/ly_perfil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_profile"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.mikhaellopez.circularimageview.CircularImageView
                        android:id="@+id/imagenUsuario"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="15dp"
                        app:srcCompat="@drawable/user_sample" />

                    <TextView
                        android:id="@+id/titulo_usuario"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="usuario que crea el evento"
                        android:textColor="@color/blanco"
                        android:textSize="16sp" />

                </LinearLayout>


                <TextView
                    android:id="@+id/titulo_titulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="Titulo"
                    android:textColor="@color/blanco"
                    android:textSize="22sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/txt_tipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="Titulo"
                android:textColor="@color/moradete"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/txt_descripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/moradeteClaro"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:textColor="@color/blanco"
                android:textSize="15dp" />

            <LinearLayout
                android:id="@+id/ly_imagen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:background="@drawable/cardtype"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp"
                android:visibility="visible">

                <ImageView
                    android:id="@+id/img_evento"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    app:srcCompat="@drawable/logo_relleno" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_localizar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="25dp"
                    android:layout_weight="1"
                    android:background="@drawable/buttonstyle"
                    android:drawableLeft="@drawable/location"
                    android:text="@string/verGPS"
                    android:textColor="@color/blanco" />

                <Button
                    android:id="@+id/btn_llamar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="25dp"
                    android:layout_weight="1"
                    android:background="@drawable/buttonstyle"
                    android:drawableLeft="@drawable/phone"
                    android:text="@string/llamar"
                    android:textColor="@color/blanco" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:visibility="gone">


                <Button
                    android:id="@+id/btn_create"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/buttonstyle"
                    android:drawableLeft="@drawable/tick"
                    android:text="@string/aceptar"
                    android:textColor="@color/blanco" />
            </LinearLayout>


        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>




</LinearLayout>
